removed getFirst reference